objects/LLC_BI__Projected_Draw_Schedule__c.object
<CustomObject>
    <description>This junction object between Pricing Option and Loan that references individual draw events.</description>
    <fields>
        <fullName>LLC_BI__Cumulative_Utilized_Percentage__c</fullName>
        <description>The system populates this optional percent field with the sum of all percents from the associated projected draw event records. By default, it is blank.</description>
        <inlineHelpText>This system-populated field displays the sum of all percents from the associated projected draw event records.</inlineHelpText>
        <label>Cumulative Utilized Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system selects this checkbox to hide invalid projected draw schedules. If the system deselects this checkbox, the system displays the valid projected draw schedule. By default, it is false.</description>
        <inlineHelpText>The system selects this checkbox to hide invalid projected draw schedules. If the system deselects this checkbox, the system displays the valid projected draw schedule.</inlineHelpText>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field with the Loan record. By default, this field is blank.</description>
        <inlineHelpText>This system-populated field displays the unique identifier for the Loan record.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Projected Draw Schedules</relationshipLabel>
        <relationshipName>Projected_Draw_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field with the Pricing Option record. By default, this field is blank.</description>
        <inlineHelpText>This system-populated field displays the unique identifier for the Pricing Option record.</inlineHelpText>
        <label>Pricing Option</label>
        <referenceTo>LLC_BI__Pricing_Option__c</referenceTo>
        <relationshipLabel>Projected Draw Schedules</relationshipLabel>
        <relationshipName>Projected_Draw_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Cumulative_Draw_Amount__c</fullName>
        <description>The system populates this optional currency field with the total amount of projected draw items associated to a projected draw schedule. By default, it is blank.</description>
        <label>Total Cumulative Draw Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Weighted_Average_Utilization__c</fullName>
        <description>The system populates this optional percent field to indicate the average utilization of the projected draw schedule weighted across all periods. By default, it is blank.</description>
        <label>Weighted Average Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Projected Draw Schedule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Projected Draw Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projected Draw Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>